# umber

./: .gitattributes  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  clippy.toml  dprint.json  manifest  primitives.md  rfpick5rj80upckvlmqdkmp2uorooogs
benchmarks/tex-exec/: Cargo.toml  README.md  node-width-budgets.json
benchmarks/tex-exec/benches/: layout.rs  pure_memo_edit.rs  shipout.rs  widths.rs
benchmarks/tex-state/: Cargo.toml
benchmarks/tex-state/benches/: accepted_edit_scaling.rs  snapshot_budgets.rs  state_budgets.rs
benchmarks/tex-state/src/: lib.rs
crates/bib-engine/: AGENTS.md  Cargo.toml
crates/bib-engine/src/: bibliography.rs  classic.rs  classic_command.rs  classic_database.rs  classic_execution.rs  classic_vm.rs  command.rs  lib.rs  session.rs  tool.rs
crates/bib-engine/src/classic_command/: tests.rs
crates/bib-engine/src/classic_database/: tests.rs
crates/bib-engine/src/classic_vm/: tests.rs
crates/bib-engine/src/command/: tests.rs
crates/bib-engine/src/session/: convert.rs  tests.rs
crates/bib-engine/src/tool/: tests.rs
crates/bib-engine/tests/: it.rs
crates/bib-engine/tests/it/: support.rs  (+3 more)
crates/bib-input/: AGENTS.md  Cargo.toml
crates/bib-input/src/: biblatexml.rs  bibtex.rs  config.rs  control.rs  extended_names.rs  lib.rs  names.rs  tests.rs  xml.rs
crates/test-support/: AGENTS.md  Cargo.toml
crates/test-support/src/: compile_fail.rs  corpus.rs  dvi.rs  lib.rs  pdf.rs  pdf_fixture.rs  pdf_probe.rs  tests.rs
crates/test-support/tests/: hello.rs
crates/tex-exec/: AGENTS.md  Cargo.toml
crates/tex-exec/src/: assignments.rs  checkpoint.rs  diagnostics.rs  dispatch.rs  error.rs  executor.rs  lib.rs  mode.rs  node_dump.rs  output.rs  packing_params.rs  page_builder.rs  paragraph_memo.rs  splitting.rs  tests.rs  timing.rs  transaction.rs  vertical.rs
crates/tex-exec/tests/: grouping_parity.rs  it.rs
crates/tex-expand/: AGENTS.md  Cargo.toml
crates/tex-expand/src/: args.rs  args_tests.rs  conditionals.rs  dispatch.rs  lib.rs  memo.rs  pdf_files.rs  pdf_random.rs  pdf_regex.rs  pdf_strings.rs  primitives.rs  scan.rs  scan_dimen.rs  scan_glue.rs  scan_helpers.rs  scan_int.rs  tests.rs  values.rs
crates/tex-expand/tests/: capability_boundaries.rs  transient_interning.rs
crates/tex-fonts/: AGENTS.md  Cargo.toml
crates/tex-fonts/src/: lib.rs  metrics.rs  pdf_encoding.rs  pdf_map.rs  pdf_pk.rs  pdf_truetype.rs  pdf_vf.rs  tests.rs  type1.rs
crates/tex-fonts/tests/: tfm_parse.rs  tftopl_crosscheck.rs
crates/tex-incr/: AGENTS.md  Cargo.toml
crates/tex-incr/src/: delivery.rs  episode.rs  lib.rs  tests.rs  trace.rs
crates/tex-lex/: AGENTS.md  Cargo.toml
crates/tex-lex/src/: lib.rs  tests.rs
crates/tex-lex/tests/: input_lines.rs
crates/tex-out/: AGENTS.md  Cargo.toml
crates/tex-out/src/: binary.rs  dvi.rs  hash.rs  html.rs  lib.rs  model.rs  pdf.rs  positioned.rs  snapping.rs  tests.rs
crates/tex-state/: AGENTS.md  Cargo.toml
crates/tex-state/benches/: state_budgets.rs
crates/tex-state/src/: cell.rs  code_tables.rs  dependency.rs  env.rs  epoch.rs  font.rs  format_container.rs  frozen_lookup.rs  glue.rs  hyphenation.rs  identity.rs  ids.rs  input.rs  interner.rs  journal.rs  lib.rs  macro_store.rs  math.rs  meaning.rs  measurement.rs  memo.rs  node.rs  node_arena.rs  page.rs  pdf.rs  provenance.rs  provenance_resolver.rs  pure_memo.rs  scaled.rs  scaled_tests.rs  source_fragments.rs  source_map.rs  state_hash.rs  stores.rs  survivor.rs  tests.rs  token.rs  token_store.rs  universe.rs  world.rs
crates/tex-state/tests/: capability_boundaries.rs  it.rs  live_boundary.rs  replay.rs
crates/tex-typeset/: AGENTS.md  Cargo.toml
crates/tex-typeset/src/: alignment.rs  expansion.rs  lib.rs  linebreak.rs  packing.rs  protrusion.rs  vertical_break.rs
crates/umber/: AGENTS.md  Cargo.toml
crates/umber-fetch/: AGENTS.md  Cargo.toml
crates/umber-fetch/src/: cache.rs  fetch.rs  format_cache.rs  lib.rs  manifest.rs  tests.rs
crates/umber-interrupt/: AGENTS.md  Cargo.toml
crates/umber-interrupt/src/: lib.rs  unix.rs  windows.rs
crates/umber-wasm/: AGENTS.md  Cargo.toml  THIRD_PARTY_NOTICES.md  package.json
crates/umber-wasm/assets/: plain-format.json  plain.fmt
crates/umber-wasm/browser-tests/: fixture.html  fixture.js  html-prototype.html  node-project.mjs  run.mjs
crates/umber-wasm/examples/: index.html  latex.html  latex.js  main.js
crates/umber-wasm/js/: AGENTS.md  cm-fonts.d.ts  cm-fonts.js  compile.d.ts  compile.js  compile.test.js  html-preview.d.ts  html-preview.js  html-preview.test.js  manifest-resolver.d.ts  manifest-resolver.js  manifest-resolver.test.js  manifest-schema.js  manifest-schema.test.js  persistent-cache.d.ts  persistent-cache.js  persistent-cache.test.js  resource-resolver.d.ts  resource-resolver.js  resource-resolver.test.js  source-map.d.ts  source-map.js  source-map.test.js  worker-controller.d.ts  worker-controller.js  worker-controller.test.js  worker-entry.js
crates/umber-wasm/src/: lib.rs  options.rs  result.rs
crates/umber-wasm/tests/: it.rs  virtual_font_acquisition.rs
crates/umber/src/: bib.rs  classic_bib.rs  cli_resource.rs  editor_session.rs  expand_dump.rs  fixed_point.rs  format_cache_cli.rs  html_output.rs  input_observation.rs  input_search.rs  latex_project.rs  lib.rs  main.rs  memory_output.rs  pdf_font_resources_tests.rs  pdf_import.rs  pdf_output.rs  pdf_vf.rs  pdftex.rs  tex_fixed_point.rs  virtual_compile.rs  watch.rs
crates/umber/tests/: cli.rs  effectful_replay.rs  it.rs  replay_identity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tfm_parse.rs
tools/corpus-sync/: Cargo.toml
tools/corpus-sync/src/: lib.rs  main.rs
tools/fixturegen/: Cargo.toml
tools/fixturegen/src/: classic_bibtex.rs  fonts.rs  main.rs  pdf.rs
tools/parity-harness/: Cargo.toml
tools/parity-harness/src/: lib.rs  main.rs
tools/texlive-wasm-publish/: AGENTS.md  Cargo.toml
tools/texlive-wasm-publish/catalog/: html-mvp-v1.json
tools/texlive-wasm-publish/src/: lib.rs  main.rs  mvp_catalog.rs  scan.rs  sharded.rs  tests.rs  tlpdb.rs
(+997 files in other folders)
