[workspace]
members = [
    "crates/*",
    "tools/refexec",
    "tools/parity-harness",
    "tools/profile-analyzer",
]
exclude = [
    "tools/corpus-sync",
    "tools/fixturegen",
    "tools/texlive-wasm-publish",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
tempfile = "3"
similar = "2"
proptest = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
bincode = "1"
unicode-width = "0.2"
pdf-writer = { path = "vendor/pdf-writer", version = "=0.15.0" }

[profile.dev]
debug = "line-tables-only"

[profile.test]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.release.package.umber-wasm]
opt-level = "s"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
