[workspace]
members = [
    "crates/*",
    "tools/refexec",
    "tools/parity-harness",
    "tools/profile-analyzer",
]
exclude = [
    "tools/corpus-sync",
    "tools/fixturegen",
    "tools/texlive-wasm-publish",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
tempfile = "3"
similar = "2"
proptest = "1"
sha2 = "0.10"
md-5 = "0.10"
subsetter = { version = "0.2.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
bincode = "1"
unicode-width = "0.2"
pdf-writer = "=0.15.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
posix-regex = "0.1.4"

[patch.crates-io]
pdf-writer = { git = "https://github.com/phulin/pdf-writer.git", rev = "030c3b1ad0e528b13ee3e6ca4605c91fbeaa3d91" }

[profile.dev]
debug = "line-tables-only"

[profile.test]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.release.package.umber-wasm]
opt-level = "s"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
