[workspace]
members = [
  "crates/*",
  "tools/parity-harness",
  "tools/profile-analyzer",
  "tools/refexec",
]
exclude = [
  "tools/corpus-sync",
  "tools/fixturegen",
  "tools/texlive-wasm-publish",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
md-5 = "0.10"
pdf-writer = { git = "https://github.com/phulin/pdf-writer.git", rev = "030c3b1ad0e528b13ee3e6ca4605c91fbeaa3d91" }
posix-regex = "0.1.4"
proptest = "1"
rustybuzz = "0.20.1"
self_cell = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
subsetter = { version = "0.2.6", default-features = false }
tempfile = "3"
unicode-bidi = "0.3.18"
unicode-script = "0.5.8"
unicode-width = "0.2"

[profile.dev]
debug = "line-tables-only"

[profile.test]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.release.package.umber-wasm]
opt-level = "s"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
