[package]
name = "umber-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tex-fonts = { path = "../crates/tex-fonts" }

[[bin]]
name = "tfm_parse"
path = "fuzz_targets/tfm_parse.rs"
test = false
doc = false
bench = false

[workspace]
