[package]
name = "tex-exec-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
criterion = "0.5"
stats_alloc = "0.1"
tex-exec = { path = "../../crates/tex-exec" }
tex-expand = { path = "../../crates/tex-expand" }
tex-fonts = { path = "../../crates/tex-fonts" }
tex-incr = { path = "../../crates/tex-incr" }
tex-lex = { path = "../../crates/tex-lex" }
tex-state = { path = "../../crates/tex-state" }
tex-typeset = { path = "../../crates/tex-typeset" }

[[bench]]
name = "shipout"
harness = false

[[bench]]
name = "widths"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "pure_memo_edit"
harness = false
