[package]
name = "tex-state-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
criterion = "0.5"
tex-exec = { path = "../../crates/tex-exec" }
tex-expand = { path = "../../crates/tex-expand" }
tex-lex = { path = "../../crates/tex-lex" }
tex-state = { path = "../../crates/tex-state", features = ["testing"] }
umber-fetch = { path = "../../crates/umber-fetch" }

[[bench]]
name = "state_budgets"
harness = false

[[bench]]
name = "snapshot_budgets"
harness = false

[[bench]]
name = "accepted_edit_scaling"
harness = false
