[package]
name = "tex-exec"
version.workspace = true
edition.workspace = true

[dependencies]
tex-expand = { path = "../tex-expand" }
tex-fonts = { path = "../tex-fonts" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
tex-state = { path = "../tex-state" }
tex-typeset = { path = "../tex-typeset" }

[dev-dependencies]
tex-state = { path = "../tex-state", features = ["testing"] }

test-support = { path = "../test-support" }

[lints]
workspace = true
