[package]
name = "tex-exec"
version.workspace = true
edition.workspace = true

[features]
expansion-stats = ["tex-expand/expansion-stats", "tex-lex/expansion-stats"]

[dependencies]
tex-expand = { path = "../tex-expand" }
tex-fonts = { path = "../tex-fonts" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
tex-state = { path = "../tex-state" }
tex-typeset = { path = "../tex-typeset" }

[dev-dependencies]
ahash.workspace = true
tex-state = { path = "../tex-state", features = ["testing"] }

test-support = { path = "../test-support" }

[lints]
workspace = true
