[package]
name = "tex-exec"
version.workspace = true
edition.workspace = true

[features]
profiling-stats = ["tex-expand/profiling-stats", "tex-lex/profiling-stats"]

[dependencies]
ahash.workspace = true
tex-expand = { path = "../tex-expand" }
tex-fonts = { path = "../tex-fonts" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
tex-shape = { path = "../tex-shape" }
tex-state = { path = "../tex-state" }
tex-typeset = { path = "../tex-typeset" }

[dev-dependencies]
tex-state = { path = "../tex-state", features = ["testing"] }

test-support = { path = "../test-support" }

[lints]
workspace = true
