[package]
name = "tex-expand"
version.workspace = true
edition.workspace = true

[features]
shadow = ["tex-state/shadow"]
expansion-stats = ["tex-lex/expansion-stats"]

[dependencies]
tex-lex = { path = "../tex-lex" }
tex-state = { path = "../tex-state" }

[dev-dependencies]
test-support = { path = "../test-support" }

[lints]
workspace = true
