[package]
name = "tex-expand"
version.workspace = true
edition.workspace = true

[features]
shadow = ["tex-state/shadow"]
profiling-stats = ["tex-lex/profiling-stats", "tex-state/profiling-stats"]

[dependencies]
md-5.workspace = true
tex-lex = { path = "../tex-lex" }
tex-state = { path = "../tex-state" }

[dev-dependencies]
ahash.workspace = true
test-support = { path = "../test-support" }

[lints]
workspace = true
