[package]
name = "tex-fonts"
version.workspace = true
edition.workspace = true

[dependencies]
tex-state = { path = "../tex-state" }

[dev-dependencies]
anyhow.workspace = true
refexec = { path = "../../tools/refexec" }
tempfile.workspace = true
test-support = { path = "../test-support" }

[lints]
workspace = true
