[package]
name = "tex-incr"
version.workspace = true
edition.workspace = true

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tex-exec = { path = "../tex-exec" }
tex-expand = { path = "../tex-expand" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
tex-state = { path = "../tex-state" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
