[package]
name = "tex-lex"
version.workspace = true
edition.workspace = true

[features]
# Compile-time instrumentation for dedicated profiling builds.
profiling-stats = []

[dependencies]
ahash.workspace = true
tex-state = { path = "../tex-state" }

[dev-dependencies]
tempfile.workspace = true
tex-state = { path = "../tex-state", features = ["testing"] }

[lints]
workspace = true
