[package]
name = "tex-out"
version.workspace = true
edition.workspace = true

[dependencies]
tex-arith = { path = "../tex-arith" }
tex-content = { path = "../tex-content" }
tex-fonts = { path = "../tex-fonts" }
sha2.workspace = true
ttf-parser = "0.25.1"
woff2-patched = "0.4.0"
pdf-writer.workspace = true
flate2.workspace = true

[dev-dependencies]
lopdf = { version = "=0.43.0", default-features = false }

[lints]
workspace = true
