[package]
name = "tex-out"
version.workspace = true
edition.workspace = true

[dependencies]
flate2.workspace = true
pdf-writer.workspace = true
sha2.workspace = true
tex-arith = { path = "../tex-arith" }
tex-content = { path = "../tex-content" }
tex-fonts = { path = "../tex-fonts" }
ttf-parser = "0.25.1"
woff2-patched = "0.4.0"

[dev-dependencies]
lopdf = { version = "=0.43.0", default-features = false }

[lints]
workspace = true
