[package]
name = "tex-out"
version.workspace = true
edition.workspace = true

[features]
dvi-tools = []

[[bin]]
name = "texout-dvitype"
path = "src/bin/texout-dvitype.rs"
required-features = ["dvi-tools"]
test = false
bench = false

[dependencies]
flate2.workspace = true
pdf-writer.workspace = true
sha2.workspace = true
tex-arith = { path = "../tex-arith" }
tex-content = { path = "../tex-content" }
tex-fonts = { path = "../tex-fonts" }
ttf-parser = "0.25.1"
woff2-patched = "0.4.0"

[dev-dependencies]
test-support = { path = "../test-support" }

[lints]
workspace = true
