[package]
name = "tex-state"
version.workspace = true
edition.workspace = true

[features]
default = []
# Mirrors every environment write into an independent map for verification.
# This must remain production-like: it does not expose handle constructors.
shadow = []
# Test-only escape hatches for replay/fuzz coverage of raw storage words.
# Engine production builds must not enable this feature.
testing = []
# Compile-time instrumentation for dedicated profiling builds. This includes
# ephemeral process-wide node counters that never participate in engine state.
profiling-stats = []

[dependencies]
ahash.workspace = true
bincode.workspace = true
chrono.workspace = true
serde.workspace = true
tex-arith = { path = "../tex-arith" }
tex-content = { path = "../tex-content" }
tex-fonts = { path = "../tex-fonts" }
unicode-width.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
test-support = { path = "../test-support" }
tempfile.workspace = true
