[package]
name = "umber-fetch"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2.workspace = true
tempfile.workspace = true
umber-distribution = { path = "../umber-distribution" }

[lints]
workspace = true
