[package]
name = "umber-fetch"
version.workspace = true
edition.workspace = true

[dependencies]
sha2.workspace = true
tempfile.workspace = true
tex-state = { path = "../tex-state" }
umber-distribution = { path = "../umber-distribution" }
ureq = { version = "3.3", default-features = false, features = ["rustls"] }

[lints]
workspace = true
