[package]
name = "umber-wasm"
version.workspace = true
edition.workspace = true
description = "Browser WebAssembly build of the Umber TeX engine"
repository = "https://github.com/phulin/umber"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
umber = { path = "../umber" }
wasm-bindgen = "0.2"
tex-state = { path = "../tex-state" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[lints]
workspace = true
