[package]
name = "umber"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gentle-profile"
path = "src/bin/gentle_profile.rs"

[features]
default = []
shadow = ["tex-state/shadow"]
profiling-stats = [
    "tex-exec/profiling-stats",
    "tex-expand/profiling-stats",
    "tex-lex/profiling-stats",
    "tex-state/profiling-stats",
]

[dependencies]
tex-exec = { path = "../tex-exec" }
tex-expand = { path = "../tex-expand" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
sha2.workspace = true
tex-state = { path = "../tex-state" }

[dev-dependencies]
tex-arith = { path = "../tex-arith" }
parity-harness = { path = "../../tools/parity-harness" }
proptest.workspace = true
tempfile.workspace = true
test-support = { path = "../test-support" }
tex-state = { path = "../tex-state", features = ["testing"] }

[lints]
workspace = true
