[package]
name = "umber"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gentle-profile"
path = "src/bin/gentle_profile.rs"

[features]
default = []
shadow = ["tex-state/shadow"]
profiling-stats = [
    "tex-exec/profiling-stats",
    "tex-expand/profiling-stats",
    "tex-lex/profiling-stats",
    "tex-state/profiling-stats",
]

[dependencies]
tex-arith = { path = "../tex-arith" }
tex-exec = { path = "../tex-exec" }
tex-expand = { path = "../tex-expand" }
tex-fonts = { path = "../tex-fonts" }
tex-lex = { path = "../tex-lex" }
tex-incr = { path = "../tex-incr" }
tex-out = { path = "../tex-out" }
sha2.workspace = true
md-5.workspace = true
tex-state = { path = "../tex-state" }
umber-vfs = { path = "../umber-vfs" }

[dev-dependencies]
lopdf = { version = "=0.43.0", default-features = false }
parity-harness = { path = "../../tools/parity-harness" }
proptest.workspace = true
tempfile.workspace = true
test-support = { path = "../test-support" }
ttf-parser = "0.25.1"
tex-state = { path = "../tex-state", features = ["testing"] }

[lints]
workspace = true
