[package]
name = "umber"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gentle-profile"
path = "src/bin/gentle_profile.rs"

[features]
default = []
shadow = ["tex-state/shadow"]
profiling-stats = [
  "tex-exec/profiling-stats",
  "tex-expand/profiling-stats",
  "tex-lex/profiling-stats",
  "tex-state/profiling-stats",
]

[dependencies]
flate2.workspace = true
lopdf = { version = "=0.43.0", default-features = false }
md-5.workspace = true
sha2.workspace = true
tex-arith = { path = "../tex-arith" }
tex-exec = { path = "../tex-exec" }
tex-expand = { path = "../tex-expand" }
tex-fonts = { path = "../tex-fonts" }
tex-incr = { path = "../tex-incr" }
tex-lex = { path = "../tex-lex" }
tex-out = { path = "../tex-out" }
tex-state = { path = "../tex-state" }
umber-distribution = { path = "../umber-distribution" }
umber-vfs = { path = "../umber-vfs" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4"
umber-fetch = { path = "../umber-fetch" }

[dev-dependencies]
parity-harness = { path = "../../tools/parity-harness" }
proptest.workspace = true
tempfile.workspace = true
test-support = { path = "../test-support" }
tex-state = { path = "../tex-state", features = ["testing"] }
ttf-parser = "0.25.1"

[lints]
workspace = true
