[package]
name = "corpus-sync"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
corpus-manifest = { path = "../../crates/corpus-manifest" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
