[package]
name = "fixturegen"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
pdf-writer = { path = "../../vendor/pdf-writer", version = "=0.15.0" }
refexec = { path = "../refexec" }
sha2 = "0.10"
tempfile = "3"
test-support = { path = "../../crates/test-support" }
tex-arith = { path = "../../crates/tex-arith" }
tex-fonts = { path = "../../crates/tex-fonts" }
tex-lex = { path = "../../crates/tex-lex" }
tex-state = { path = "../../crates/tex-state" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
