[package]
name = "parity-harness"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
refexec = { path = "../refexec" }
serde.workspace = true
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
tex-out = { path = "../../crates/tex-out" }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
