[package]
name = "parity-harness"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
corpus-manifest = { path = "../../crates/corpus-manifest" }
refexec = { path = "../refexec" }
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
tex-out = { path = "../../crates/tex-out" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
